force-app/main/default/objects/Meeting_Speaker_Suggestion__c/Meeting_Speaker_Suggestion__c.object-meta.xml
<CustomObject>
    <label>Meeting Speaker Suggestion</label>
    <nameField>
        <displayFormat>MSS-{0000}</displayFormat>
        <label>Meeting Speaker Suggestion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Speaker Suggestions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>