force-app/main/default/objects/Meeting_Speaker_Suggestion__c/fields/Confirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Status__c</fullName>
    <label>Confirmation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Followed-up</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Unconfirmed</fullName>
            </value>
            <value>
                <fullName>Reminded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>