force-app/main/default/objects/Meeting_Speaker_Suggestion__c/fields/Contact_with_Speaker__c.field-meta.xml
<CustomField>
    <fullName>Contact_with_Speaker__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Contact/&quot; + Speaker__c + &quot;/view?c__contactWithSpeaker=1&amp;c__meetingSpeakerSuggestionId=&quot;+Id+&quot;&amp;c__meetingId=&quot;+Meeting__c, &quot;Contact With Speaker&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact with Speaker</label>
    <type>Text</type>
</CustomField>