force-app/main/default/objects/Meeting_Speaker_Suggestion__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reason 1</fullName>
            </value>
            <value>
                <fullName>Reason 2</fullName>
            </value>
            <value>
                <fullName>Reason 3</fullName>
            </value>
            <value>
                <fullName>Reason 4</fullName>
            </value>
            <value>
                <fullName>Reason 5</fullName>
            </value>
            <value>
                <fullName>Reason 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>