force-app/main/default/objects/Meeting_Speaker_Suggestion__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <label>Speaker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meeting Speaker Suggestions</relationshipLabel>
    <relationshipName>Meeting_Speaker_Suggestions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>