force-app/main/default/objects/Meeting_Speaker_Suggestion__c/fields/Speaker_Order__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Order__c</fullName>
    <label>Speaker Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>